# usbarmory-rust

./: .gitignore  README.md  rust-toolchain.toml
.cargo/: config.toml
common/c-stubs/: Cargo.toml
common/consts/: Cargo.toml
docs/: hardware-test.md  modernization.md  security-appliance-runtime.md
firmware/: Cargo.toml
firmware/cortex-a/: Cargo.toml
firmware/cortex-a-rtic/: Cargo.toml
firmware/cortex-a-rtic/macros/: Cargo.toml
firmware/cortex-a/src/register/: scr.rs  sctlr.rs
firmware/examples/: Cargo.toml
firmware/exception-reset/: Cargo.toml
firmware/imx6ul-pac/: Cargo.toml
firmware/memlog/: Cargo.toml
firmware/memlog/src/: lib.rs
firmware/panic-serial/: Cargo.toml
firmware/usbarmory/: Cargo.toml  README.md
firmware/usbarmory-rt/: Cargo.toml  build.rs
firmware/usbarmory-rt/src/: lib.rs
firmware/usbarmory/src/: dcp.rs  emmc.rs  lib.rs  storage.rs  usbd.rs
firmware/usbarmory/src/dcp/: aes128.rs  sha256.rs
firmware/usbarmory/src/emmc/: card.rs  cmd.rs
firmware/usbarmory/src/usbd/: bus.rs
host/image/: Cargo.toml
host/image/src/: dcd.rs  ivt.rs  write.rs
host/txt2rust/: Cargo.toml
host/txt2rust/src/: parse.rs
host/usbc/: Cargo.toml
host/usbc/src/: main.rs
host/usd/: Cargo.toml
host/usd/src/: lib.rs
host/usd/src/hid/: rusb.rs
runtime/: Cargo.toml
runtime/appliance-core/: Cargo.toml
runtime/appliance-core/src/: lib.rs
runtime/appliance-example/: Cargo.toml
runtime/appliance-example/examples/: framed_host.rs
runtime/appliance-example/src/: lib.rs
runtime/appliance-ssh-agent/: Cargo.toml
runtime/appliance-ssh-agent/src/: lib.rs
