[package]
authors = ["GoodAncestor"]
edition = "2018"
license = "Apache-2.0 OR MIT"
name = "imx6ul-pac"
publish = false
version = "0.0.0"

[features]
ccm = []
ccm_analog = []
gicc = []
gicd = []
gpio = []
hw_dcp = []
i2c = []
iomuxc = []
mmdc = []
rng = []
snvs_hp = []
snvs_lp = []
src = []
uart = []
usb_analog = []
usbnc_usb = []
usb_uog = []
usbphy = []
usdhc = []
wdog = []
