[package]
authors = ["GoodAncestor"]
edition = "2018"
license = "Apache-2.0 OR MIT"
name    = "image"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1"
nom = "8"
xmas-elf = "0.10"

[dependencies.pac]
package = "imx6ul-pac"
path = "../../firmware/imx6ul-pac"
features = ["iomuxc", "mmdc"]
