[package]
authors = ["GoodAncestor"]
edition = "2018"
license = "Apache-2.0 OR MIT"
name    = "usd"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1"
arrayref = "0.3"
image = { path = "../image" }
rusb = "0.9"
serialport = { version = "4.9", default-features = false }
xmas-elf = "0.10"

[target.'cfg(target_os = "linux")'.dependencies.hidapi]
default-features = false
features = ["linux-static-libusb"]
optional = true
version = "2.6"

[target.'cfg(not(target_os = "linux"))'.dependencies.hidapi]
optional = true
version = "2.6"

[features]
default = ["rusb-hid"]
# alternative HID backend -- disable `hidapi' if you plan to use this one
rusb-hid = []
