[package]
name = "appliance-example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
appliance-core = { path = "../appliance-core" }

[[example]]
name = "framed_host"
required-features = ["std"]

[features]
default = []
std = ["appliance-core/std"]
